get2gnow 0.0.0.ec.db5: preferences extended & further identi.ca support.
When I refactored my interface for sending tweets & DMs I added the functionality to sound an error as you typed beyond Twitter's 140 character limit.  Now, as I have a tendancy to babble & often write paragraphs in one tweet, I love this function, but it occured to me that others may find it a tad annoying.  So I've added an option to the preferences dialog to let you decide if you want to be alerted or not.

I'm still working on adding identi.ca support.  Adding support for multiple services is proofing to require more work than I'd expected.  So I'm going to hack in simple identi.ca support.  What this means is that as soon as I can, hopefully today, I'll add a lil throw away hack to support identi.ca.  However adding support for other laconica instances is going to take quite a bit more work.  None of its difficult, only time consuming, & right now my health isn't giving me enough time each day to add the support in the way I want.  As I'm only writing quality code, & rewriting all of the 'code & paste' that I inherited when I forked get2gnow.

But I want identi.ca support to be added as soon as I can so as many as possible, for now, can & will want to use get2gnow.  I'm only settling for a tempory identi.ca hack because support for identi.ca is literally about 90 percent complete.  Adding a lil hack will have it working before the weekend.  However give my health's current state I really have no clue how long it will take me to add support for all laconica instances.  I simply don't know how much time I have each day.  Today, for example I only had about 3 decent hours where I could truly focus & even during that time I was extremely sick.

Thankfully I see both my GP & endocrinologist next week, I'll be seeing my neurologist as soon as I can, I'll find out when later today.  From then I'll be finding a pain medicine specialist & I'm hoping to find get some relief from my constent & over w

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -10,7 +10,7 @@ schemas_DATA 	 = $(schemas_in_files:.schemas.in=.schemas)
 
 gtkbuilderdir = $(datadir)/get2gnow
 gtkbuilder_DATA = 			\
-	accounts-dialog.ui		\
+	services-dialog.ui		\
 	following-viewer.ui		\
 	friends-manager.ui		\
 	main-window.ui			\
