--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -245,7 +245,7 @@ schemas_in_files = get2gnow.schemas.in
 schemas_DATA = $(schemas_in_files:.schemas.in=.schemas)
 gtkbuilderdir = $(datadir)/get2gnow
 gtkbuilder_DATA = 			\
-	accounts-dialog.ui		\
+	services-dialog.ui		\
 	following-viewer.ui		\
 	friends-manager.ui		\
 	main-window.ui			\
