--- a/po/Makefile.in
+++ b/po/Makefile.in
@@ -64,7 +64,7 @@ USE_LINGUAS=$(shell if test -n "$(USER_LINGUAS)" -o -n "$(LINGUAS)"; then LLINGU
 POFILES=$(shell LINGUAS="$(USE_LINGUAS)"; for lang in $$LINGUAS; do printf "$$lang.po "; done)
 
 DISTFILES = ChangeLog Makefile POTFILES $(POFILES)
-EXTRA_DISTFILES = POTFILES.skip Makevars LINGUAS
+EXTRA_DISTFILES = Makevars LINGUAS
 
 POTFILES = \
 # This comment gets stripped out
