get2gnow 00.00.eD.a00: multiple services & account support & way to much more.
get2gnow now supports multiple accounts on multiple services.  At least it does to a certain extent.  I still have some debugging to do & I know there are a lot of things that are now working yet.

This commit includes over 1wk of work, all while I've been extremely ill.  I've done a ton more than just add multiple account support though its my killer feature, for now ;-).

But I've also improved my tweet view & dm control 'window'.

I would love help w/debugging this commit as I get ready for get2gnow's 1st release.

Tomorrow I have tons of debugging to do...well maybe.  What ever I have to do I really hope I'll finish all, or at least most of my work before Monday.  My early next week is filled with Drs visits & I'll have next to no time to work on any thing.

There is so much in this way commit more than I can deailt here.  Well not reall, but its to much to write all about here & now.  Its so way past my bed time, I'm gonna pass out now.

BTW: if you do run this build please do.  I would recommend running './configure --enable-debug' and running get2gnow from './src/get2gnow'.  This will keep you previous version working and keeps your old settings. If all works well than feel free to run 'make install'.  Either way I'd love your help & feed back as I get ready to release my 1st version of get2gnow.

Damn this has been a long week & I have the bruises, code, & fever to proof it.  Please let me know if you feel it was worth it.

BTW, don't be surpised if this commit won't run at all.  I know there are bugs, but it may work wonderfully, so if you want multiple twitter, identi.ca, & etc accounts go a head & give this commit a shot...& def watch this tree.

Committed on: 2009-05-03 @ 03:00:29 AM

--- a/data/get2gnow.schemas.in
+++ b/data/get2gnow.schemas.in
@@ -2,80 +2,80 @@
   <schemalist>
     
     <schema>
-       <key>/schemas/apps/get2gnow/auth/services</key>
-       <applyto>/apps/get2gnow/auth/services</applyto>
+       <key>/schemas/apps/get2gnow/auth/accounts</key>
+       <applyto>/apps/get2gnow/auth/accounts</applyto>
        <owner>get2gnow</owner>
        <type ltype="string">list</type>
-       <default>[twitter.com,identi.ca]</default>
+       <default>[me@twitter.com,me@identi.ca]</default>
        <locale name="C">
-          <short>Services URI (not-yet implemented)</short>
-          <long>Secure HTTP URI for the accounts services, username, and password(if gnome_keyring's not enabled).</long>
+          <short>A list of your services</short>
+          <long>All of your accounts formated as username@URL for all accounts & services.  All services will be connected to using HTTPS.</long>
        </locale>
     </schema>
 
     <schema>
-        <key>/schemas/apps/get2gnow/auth/identi.ca/enabled</key>
-    	<applyto>/apps/get2gnow/auth/identi.ca/enabled</applyto>
+        <key>/schemas/apps/get2gnow/auth/me@identi.ca/enabled</key>
+    	<applyto>/apps/get2gnow/auth/me@identi.ca/enabled</applyto>
     	<owner>get2gnow</owner>
     	<type>bool</type>
     	<default>false</default>
     	<locale name="C">
-    	   <short>Enable identi.ca account</short>
-       	   <long>Enable's your identi.ca accout.</long>
+    	   <short>Enable me@identi.ca account</short>
+       	   <long>Enable's your me@identi.ca accout.</long>
       	</locale>
     </schema>
 										
     <schema>
-       <key>/schemas/apps/get2gnow/auth/identi.ca/username</key>
-       <applyto>/apps/get2gnow/auth/identi.ca/username</applyto>
+       <key>/schemas/apps/get2gnow/auth/me@identi.ca/username</key>
+       <applyto>/apps/get2gnow/auth/me@identi.ca/username</applyto>
        <owner>get2gnow</owner>
        <type>string</type>
        <default></default>
        <locale name="C">
-          <short>identi.ca username</short>
-          <long>User's identi.ca username.</long>
+          <short>me@identi.ca username</short>
+          <long>User's me@identi.ca username.</long>
        </locale>
     </schema>
 
     <schema>
-       <key>/schemas/apps/get2gnow/auth/identi.ca/password</key>
-       <applyto>/apps/get2gnow/auth/identi.ca/password</applyto>
+       <key>/schemas/apps/get2gnow/auth/me@identi.ca/password</key>
+       <applyto>/apps/get2gnow/auth/me@identi.ca/password</applyto>
        <owner>get2gnow</owner>
        <type>string</type>
        <default></default>
        <locale name="C">
-          <short>identi.ca password</short>
-          <long>User's identi.ca password.</long>
+          <short>me@identi.ca password</short>
+          <long>User's me@identi.ca password.</long>
        </locale>
     </schema>
     
     <schema>
-    	<key>/schemas/apps/get2gnow/auth/identi.ca/auto_connect</key>
-    	<applyto>/apps/get2gnow/auth/identi.ca/auto_connect</applyto>
+    	<key>/schemas/apps/get2gnow/auth/me@identi.ca/auto_connect</key>
+    	<applyto>/apps/get2gnow/auth/me@identi.ca/auto_connect</applyto>
     	<owner>get2gnow</owner>
     	<type>bool</type>
     	<default>true</default>
     	<locale name="C">
-    	   <short>Log on to identi.ca automatically.</short>
-    	   <long>Log on to identi.ca automatically.</long>
+    	   <short>Log on to me@identi.ca automatically.</short>
+    	   <long>Log on to me@identi.ca automatically.</long>
     	</locale>
     </schema>
 
     <schema>
-        <key>/schemas/apps/get2gnow/auth/twitter.com/enabled</key>
-    	<applyto>/apps/get2gnow/auth/twitter.com/enabled</applyto>
+        <key>/schemas/apps/get2gnow/auth/me@twitter.com/enabled</key>
+    	<applyto>/apps/get2gnow/auth/me@twitter.com/enabled</applyto>
     	<owner>get2gnow</owner>
     	<type>bool</type>
     	<default>false</default>
     	<locale name="C">
-    	   <short>Enable twitter.com account</short>
-       	   <long>Enable's your twitter.com accout.</long>
+    	   <short>Enable me@twitter.com account</short>
+       	   <long>Enable's your me@twitter.com accout.</long>
       	</locale>
     </schema>
 										
     <schema>
-       <key>/schemas/apps/get2gnow/auth/twitter.com/username</key>
-       <applyto>/apps/get2gnow/auth/twitter.com/username</applyto>
+       <key>/schemas/apps/get2gnow/auth/me@twitter.com/username</key>
+       <applyto>/apps/get2gnow/auth/me@twitter.com/username</applyto>
        <owner>get2gnow</owner>
        <type>string</type>
        <default></default>
@@ -86,8 +86,8 @@
     </schema>
 
     <schema>
-       <key>/schemas/apps/get2gnow/auth/twitter.com/password</key>
-       <applyto>/apps/get2gnow/auth/twitter.com/password</applyto>
+       <key>/schemas/apps/get2gnow/auth/me@twitter.com/password</key>
+       <applyto>/apps/get2gnow/auth/me@twitter.com/password</applyto>
        <owner>get2gnow</owner>
        <type>string</type>
        <default></default>
@@ -98,14 +98,14 @@
     </schema>
     
     <schema>
-    	<key>/schemas/apps/get2gnow/auth/twitter.com/auto_connect</key>
-    	<applyto>/apps/get2gnow/auth/twitter.com/auto_connect</applyto>
+    	<key>/schemas/apps/get2gnow/auth/me@twitter.com/auto_connect</key>
+    	<applyto>/apps/get2gnow/auth/me@twitter.com/auto_connect</applyto>
     	<owner>get2gnow</owner>
     	<type>bool</type>
     	<default>true</default>
     	<locale name="C">
-    	   <short>Log on to twitter.com automatically.</short>
-    	   <long>Log on to twitter.com automatically.</long>
+    	   <short>Log on to me@twitter.com automatically.</short>
+    	   <long>Log on to me@twitter.com automatically.</long>
     	</locale>
     </schema>
 
