get2gnow 0.0.db0.a01: multiple accounts & services support working, bugs w/adding accounts.
1st off I would strongly recommend *not* using this commit.  The most recent stable commit of get2gnow can always be found at http://cli.gs/get2gnow.release.  Stick w/that commit for now.

That said I now have get2gnow supporting multiple accounts working & submitting to all configured services.  I have several bugs in get2gnow 'services-dialog' so creating new accounts is spotty at best but getting closer, literally some times it works & some times it won't.  I know what's going on & its several things, all easily resolvable but right now I'm off to my Drs w/my long term goal of 'getting better', or just not feeling like complete ass all the time would be cool too.

I've added several tweaks as well.  get2gnow's tweet viewing & composing area can now be split off into its own window or embed as part of get2gnow's core interface.  The ladder being the default but it can be changed in the preferences.

I also have to sync get2gnow account listing with what accounts are accually available & enabled.  Again this won't take me long but...blah blah blah.

Sufice to say that there's a ton in this commit & a ton I've been working on for next to forever.  Its nice its all coming together but for now I've got to 'rush', existential question for this commit: can a woman, or man, with a movement disorder be said to hurry & if so can it ever be said that we've actually 'rushed' even when its as fast as we can move.

Having a brain one's body cannot keep up w/really sucks.  But so do a lot of things, like the fact that get2gnow's not working & I've got to spent 1/2 of today & 3/4 of tomorrow all just seeing Drs about my health.  I situation that seems to do nothing but get worse while I fight just to keep my treatment the same.  If they can't do better at least I can fight them not to make things any worse.

LOL, fighting for things not to get worse.  I sure know how to pick my battels.



--- a/data/get2gnow.schemas.in
+++ b/data/get2gnow.schemas.in
@@ -9,7 +9,7 @@
        <default>[me@twitter.com,me@identi.ca]</default>
        <locale name="C">
           <short>A list of your services</short>
-          <long>All of your accounts formated as username@URL for all accounts & services.  All services will be connected to using HTTPS.</long>
+          <long>All of your accounts formated as username@URL for all accounts &amp; services.  All services will be connected to using HTTPS.</long>
        </locale>
     </schema>
 
@@ -25,18 +25,6 @@
       	</locale>
     </schema>
 										
-    <schema>
-       <key>/schemas/apps/get2gnow/auth/me@identi.ca/username</key>
-       <applyto>/apps/get2gnow/auth/me@identi.ca/username</applyto>
-       <owner>get2gnow</owner>
-       <type>string</type>
-       <default></default>
-       <locale name="C">
-          <short>me@identi.ca username</short>
-          <long>User's me@identi.ca username.</long>
-       </locale>
-    </schema>
-
     <schema>
        <key>/schemas/apps/get2gnow/auth/me@identi.ca/password</key>
        <applyto>/apps/get2gnow/auth/me@identi.ca/password</applyto>
@@ -73,18 +61,6 @@
       	</locale>
     </schema>
 										
-    <schema>
-       <key>/schemas/apps/get2gnow/auth/me@twitter.com/username</key>
-       <applyto>/apps/get2gnow/auth/me@twitter.com/username</applyto>
-       <owner>get2gnow</owner>
-       <type>string</type>
-       <default></default>
-       <locale name="C">
-          <short>twitter username</short>
-          <long>User's twitter username.</long>
-       </locale>
-    </schema>
-
     <schema>
        <key>/schemas/apps/get2gnow/auth/me@twitter.com/password</key>
        <applyto>/apps/get2gnow/auth/me@twitter.com/password</applyto>
@@ -202,6 +178,18 @@
 	<locale name="C">
 	   <short>Show notification of new Twitter messages</short>
 	   <long>Show notification of new Twitter messages.</long>
+	</locale>
+     </schema>
+
+     <schema>
+	<key>/schemas/apps/get2gnow/ui/use_tweet_dialog</key>
+	<applyto>/apps/get2gnow/ui/use_tweet_dialog</applyto>
+	<owner>get2gnow</owner>
+	<type>bool</type>
+	<default>false</default>
+	<locale name="C">
+	   <short>To write Twitter messages in a seperate window</short>
+	   <long>To write Twitter messages in a seperate window.</long>
 	</locale>
      </schema>
 
