get2gnow 000.000.DB3.aEC3: functioning, but incomplete, support for multiple accounts on Twitter, Identi.ca, and Laconica installs.  Also includes UI & performance enhancements.
I finallay have get2gnow supporting multiple connections to twitter.com, identi.ca, and any install of Laconica.  I have only tested this using my Twitter & Identi.ca account.  I'll be testing it on other Laconica installs as well, though the only others I know of are LinuxOutlaws.net & SuficeToSay.  I'll be testing those as well.

I also have all of get2gnow networking functions to support multiple account & services though I haven't tested all of these functions.

There appear to be some random isssues with replying to tweets from identi.ca, so don't be surpised if it acts very oddly, including segfaulting though most often it seems to work just fine.  Replying to tweets from Twitter.com still works fine w/o any issues having been introduced.

Identi.ca's 'TwtterCompatible REST Resources' are accessible much like Twitter's, which has made adding this fairly easy...is a drill to one's temple consider easy? :-P  There are some rather drastic differences though and I still have to work through those.

Adding and saving new accounts should work fine though there is still a lot of polish & shiny I want to put on my accounts/services dialog.

I have also completely re-wrote the tweet entry dialog area.  It is now much more robust & contains get2gnow's core interface.  I have also enabled it so the tweet view & entry window can be split off from the main window and used in a separate 'floating' model window.  Right this only take effects after changing the pereference & than restarting get2gnow.  I won't be keeping it this way, I intend to add a detach/attach button to the tweet view area, its simply some thing I haven't gotten around to yet.

I've sadly done very little this week as most of my week was taken up by visiting my GP & endrocrynologist which whiped me out for over 36hrs after.  So th

--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT([get2gnow], [00.00.eD.a00], [http://uberChicGeekChick.Com/?projects=get2gnow], [get2gnow])
+AC_INIT([get2gnow], [000.000.DB3.aEC3], [http://uberChicGeekChick.Com/?projects=get2gnow], [get2gnow])
 AC_PREREQ(2.59)
 AC_COPYRIGHT([Copyright (C) 2009 Kaity G. B.])
 
@@ -95,6 +95,11 @@ PKG_CHECK_MODULES(get2gnow,
 ])
 AC_SUBST(get2gnow_CFLAGS)
 AC_SUBST(get2gnow_LIBS)
+
+dnl *******************************
+dnl *   debug & gdb support       *
+dnl *******************************
+AM_CONDITIONAL(HAVE_GNOME_KEYRING, test x$have_gnome_keyring = xyes)
 
 dnl -----------------------------------------------------------
 dnl Language Support
